--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo-container">
+        <div class="logo">
             Header Logo
         </div>
-        <div class="navbar-container">
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
+        <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
     </div>
     <div class="first-section-container">
         <h1>This website is awesome</h1>
