--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         </ul>
     </div>
     <div class="first-section-container">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
+        <div class="sign-up-card">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
         <img src="https://placehold.co/600x400" alt="This is a placeholder for an image.">
     </div>
     <div class="second-section-container">
