--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button>Sign up</button>
         </div>
-        <img src="https://placehold.co/600x400" alt="This is a placeholder for an image.">
+        <img src="./images/placeholder.png" alt="This is a placeholder for an image.">
     </div>
     <div class="second-section-container">
         <h1>Some random information.</h1>
