--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <h1>Some random information.</h1>
         <div class="cards-container">
             <div class="card">
-                <img src="https://placehold.co/200x200" alt="This is a placeholder for an image.">
+                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="https://placehold.co/200x200" alt="This is a placeholder for an image.">
+                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="https://placehold.co/200x200" alt="This is a placeholder for an image.">
+                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="https://placehold.co/200x200" alt="This is a placeholder for an image.">
+                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
