--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
     </div>
     <div class="third-section-container">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+        <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote-author">-Thor, God of Thunder</p>
     </div>
     <div class="fourth-section-container">
         <div class="call-to-action-container">
