--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
     </div>
     <div class="fourth-section-container">
         <div class="call-to-action-container">
-            <h2>Call to action! It's time!</h2>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <div class="call-to-action-text">
+                <h3>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="call-to-action-button">
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">
