--- a/index.html
+++ b/index.html
@@ -20,49 +20,51 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
-    <div class="first-section-container">
-        <div class="sign-up-card">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
-        </div>
-        <img src="./images/placeholder.png" alt="This is a placeholder for an image.">
-    </div>
-    <div class="second-section-container">
-        <h1>Some random information.</h1>
-        <div class="cards-container">
-            <div class="card">
-                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="card">
-                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="card">
-                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="card">
-                <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-        </div>
-    </div>
-    <div class="third-section-container">
-        <div class="quote-container">
-            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="quote-author">-Thor, God of Thunder</p>
-        </div>
-    </div>
-    <div class="fourth-section-container">
-        <div class="call-to-action-container">
-            <div class="call-to-action-text">
-                <h3>Call to action! It's time!</h2>
-                <p>Sign up for our product by clicking that button right over there!</p>
-            </div>
-            <div class="call-to-action-button">
+    <div class="content">
+        <div class="first-section-container">
+            <div class="sign-up-card">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button>Sign up</button>
+            </div>
+            <img src="./images/placeholder.png" alt="This is a placeholder for an image.">
+        </div>
+        <div class="second-section-container">
+            <h1>Some random information.</h1>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="./images/placeholder-cards.png" alt="This is a placeholder for an image.">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+        <div class="third-section-container">
+            <div class="quote-container">
+                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="quote-author">-Thor, God of Thunder</p>
+            </div>
+        </div>
+        <div class="fourth-section-container">
+            <div class="call-to-action-container">
+                <div class="call-to-action-text">
+                    <h3>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="call-to-action-button">
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
     </div>
